Update Lab 1 and Lab 2 notebooks

--- a/Lab1_Marketing_content_generation.ipynb
+++ b/Lab1_Marketing_content_generation.ipynb
@@ -6,7 +6,7 @@
       "source": [
         "# Lab 1: Marketing Content Generation with LLMs\n",
         "\n",
-        "Welcome to your first hands-on experience with Large Language Models (LLMs)!\n",
+        "Welcome to your first hands-on experience with Large Language Models!\n",
         "\n",
         "**What you'll learn in this lab:**\n",
         "- How to set up and initialize Google's Vertex AI\n",
@@ -254,13 +254,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Replace with your Google Cloud Project ID\n",
         "# Example: PROJECT_ID = \"my-project-123456\"\n",
-        "PROJECT_ID = \"agents4good\"\n"
+        "PROJECT_ID = \"test-project-123456\"\n"
       ]
     },
     {
@@ -281,15 +281,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "✅ Vertex AI initialized with project: agents4good\n",
-            "📦 Using model: gemini-2.0-flash-001\n"
+            " Vertex AI initialized with project: test-project-123456\n",
+            " Using model: gemini-2.0-flash-001\n"
           ]
         }
       ],
@@ -300,8 +300,8 @@
         "# Select a model to use: \"gemini-2.5-flash\", \"gemini-2.5-pro\", \"gemini-2.0-flash-001\"\n",
         "MODEL = \"gemini-2.0-flash-001\"\n",
         "\n",
-        "print(f\"✅ Vertex AI initialized with project: {PROJECT_ID}\")\n",
-        "print(f\"📦 Using model: {MODEL}\")\n"
+        "print(f\" Vertex AI initialized with project: {PROJECT_ID}\")\n",
+        "print(f\" Using model: {MODEL}\")\n"
       ]
     },
     {
@@ -372,14 +372,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "✅ Model initialized and ready to generate content!\n"
+            " Model initialized and ready to generate content!\n"
           ]
         },
         {
@@ -395,7 +395,7 @@
         "# Create the model with our system instructions\n",
         "model = GenerativeModel(MODEL, system_instruction=[system_instructions])\n",
         "\n",
-        "print(\"✅ Model initialized and ready to generate content!\")\n"
+        "print(\" Model initialized and ready to generate content!\")\n"
       ]
     },
     {
@@ -499,10 +499,10 @@
         "Plain text is great for humans, but what if we need to use this data in an application? That's where **structured output** comes in!\n",
         "\n",
         "**Why use structured output?**\n",
-        "- ✅ Easy to parse in code (no regex needed!)\n",
-        "- ✅ Consistent format every time\n",
-        "- ✅ Can be stored in databases directly\n",
-        "- ✅ Works great with APIs and frontend applications\n",
+        "-  Easy to parse in code (no regex needed!)\n",
+        "-  Consistent format every time\n",
+        "-  Can be stored in databases directly\n",
+        "-  Works great with APIs and frontend applications\n",
         "\n",
         "**How it works:**\n",
         "We define a **schema** (structure) that tells the AI exactly what format to return.\n",
@@ -736,30 +736,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "---Lab Solution 1---\n",
-            "Okay, here's a marketing email designed to promote Canada Dry Ginger Ale Zero Sugar, tailored for health-conscious consumers:\n",
-            "\n",
-            "**Subject: Zero Guilt, All the Refreshment: Canada Dry Zero Sugar is Here!**\n",
-            "\n",
-            "Hi [Name],\n",
-            "\n",
-            "Looking for a bubbly, refreshing treat without the sugar rush? We get it! That's why we're so excited about Canada Dry Ginger Ale Zero Sugar. You can dive into that classic ginger taste you love, knowing it's completely guilt-free. It's the perfect way to add a little sparkle to your day, any time of day.\n",
-            "\n",
-            "Imagine kicking back with the soothing fizz of Canada Dry Zero Sugar, knowing you're making a choice that's both delicious and smart. Plus, it's caffeine-free, so you can sip and relax, whether it's afternoon or evening. Feeling a little fancy? Canada Dry Zero Sugar also makes a fantastic mixer for cocktails! The possibilities are endless.\n",
-            "\n",
-            "Ready to experience guilt-free refreshment? Find Canada Dry Ginger Ale Zero Sugar at your local grocery store today!\n",
-            "\n",
-            "Cheers to a refreshing day!\n",
-            "\n",
-            "The Canada Dry Team\n",
-            "\n"
+            "---Lab Solution 1---\n"
           ]
         }
       ],
@@ -768,25 +752,7 @@
         "\n",
         "# Your solution here!\n",
         "# Hint: Create a prompt that asks for an email format\n",
-        "\n",
-        "email_prompt = f\"\"\"\n",
-        "Create a marketing email promoting Canada Dry Ginger Ale Zero Sugar.\n",
-        "\n",
-        "Use these product features as your source material:\n",
-        "{feature_bullets}\n",
-        "\n",
-        "The email should include:\n",
-        "- A catchy subject line\n",
-        "- A friendly greeting\n",
-        "- 2-3 paragraphs highlighting the key benefits\n",
-        "- A clear call-to-action\n",
-        "- A professional sign-off\n",
-        "\n",
-        "Make it feel personal and engaging, targeting health-conscious consumers who love refreshing drinks.\n",
-        "\"\"\"\n",
-        "\n",
-        "response = model.generate_content(email_prompt)\n",
-        "print(response.text)\n"
+        "\n"
       ]
     },
     {
@@ -807,16 +773,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "---Lab Solution 2---\n",
-            "Happy Fourth of July! I'm out of the office celebrating and will be back on July 5th.\n",
-            "\n"
+            "---Lab Solution 2---\n"
           ]
         }
       ],
@@ -824,19 +788,7 @@
         "print(\"---Lab Solution 2---\")\n",
         "\n",
         "# Your solution here!\n",
-        "\n",
-        "ooo_prompt = \"\"\"\n",
-        "Write a one sentence out of office message for Microsoft Teams for the Fourth of July holiday.\n",
-        "\n",
-        "Requirements:\n",
-        "- Exactly one sentence\n",
-        "- Polite and professional tone\n",
-        "- Mention the holiday\n",
-        "- Indicate returning on July 5th\n",
-        "\"\"\"\n",
-        "\n",
-        "response = model.generate_content(ooo_prompt)\n",
-        "print(response.text)\n"
+        "\n"
       ]
     },
     {
@@ -856,58 +808,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "---Lab Solution 3---\n",
-            "[\n",
-            "  {\n",
-            "    \"drink\": \"Coca-Cola\",\n",
-            "    \"meal\": \"Classic Cheeseburger\"\n",
-            "  },\n",
-            "  {\n",
-            "    \"drink\": \"Iced Tea\",\n",
-            "    \"meal\": \"Pulled Pork Sandwich\"\n",
-            "  },\n",
-            "  {\n",
-            "    \"drink\": \"Lemonade\",\n",
-            "    \"meal\": \"Grilled Chicken\"\n",
-            "  },\n",
-            "  {\n",
-            "    \"drink\": \"Dr. Pepper\",\n",
-            "    \"meal\": \"BBQ Ribs\"\n",
-            "  },\n",
-            "  {\n",
-            "    \"drink\": \"Root Beer\",\n",
-            "    \"meal\": \"Hot Dogs\"\n",
-            "  },\n",
-            "  {\n",
-            "    \"drink\": \"Ginger Ale\",\n",
-            "    \"meal\": \"Grilled Salmon\"\n",
-            "  },\n",
-            "  {\n",
-            "    \"drink\": \"Orange Soda\",\n",
-            "    \"meal\": \"Brisket\"\n",
-            "  },\n",
-            "  {\n",
-            "    \"drink\": \"Grape Soda\",\n",
-            "    \"meal\": \"Veggie Skewers\"\n",
-            "  }\n",
-            "]\n",
-            "\n",
-            "📋 BBQ Pairings:\n",
-            "  1. Coca-Cola + Classic Cheeseburger\n",
-            "  2. Iced Tea + Pulled Pork Sandwich\n",
-            "  3. Lemonade + Grilled Chicken\n",
-            "  4. Dr. Pepper + BBQ Ribs\n",
-            "  5. Root Beer + Hot Dogs\n",
-            "  6. Ginger Ale + Grilled Salmon\n",
-            "  7. Orange Soda + Brisket\n",
-            "  8. Grape Soda + Veggie Skewers\n"
+            "---Lab Solution 3---\n"
           ]
         }
       ],
@@ -916,46 +824,7 @@
         "\n",
         "# Your solution here!\n",
         "\n",
-        "bbq_prompt = \"\"\"\n",
-        "Generate a list of 8 classic BBQ soft drink and meal pairings that would be popular at \n",
-        "an American summer cookout. Include a variety of drinks and meals.\n",
-        "\"\"\"\n",
-        "\n",
-        "# Define the schema for drink-meal pairs\n",
-        "bbq_schema = {\n",
-        "    \"type\": \"array\",\n",
-        "    \"items\": {\n",
-        "        \"type\": \"object\",\n",
-        "        \"properties\": {\n",
-        "            \"drink\": {\n",
-        "                \"type\": \"string\",\n",
-        "                \"description\": \"Name of the soft drink\"\n",
-        "            },\n",
-        "            \"meal\": {\n",
-        "                \"type\": \"string\",\n",
-        "                \"description\": \"Name of the BBQ food item\"\n",
-        "            }\n",
-        "        },\n",
-        "        \"required\": [\"drink\", \"meal\"]\n",
-        "    }\n",
-        "}\n",
-        "\n",
-        "response = model.generate_content(\n",
-        "    bbq_prompt,\n",
-        "    generation_config=GenerationConfig(\n",
-        "        response_mime_type=\"application/json\",\n",
-        "        response_schema=bbq_schema\n",
-        "    )\n",
-        ")\n",
-        "\n",
-        "print(response.text)\n",
-        "\n",
-        "# Bonus: Pretty print the results\n",
-        "import json\n",
-        "pairings = json.loads(response.text)\n",
-        "print(\"\\n📋 BBQ Pairings:\")\n",
-        "for i, pair in enumerate(pairings, 1):\n",
-        "    print(f\"  {i}. {pair['drink']} + {pair['meal']}\")\n"
+        "\n"
       ]
     },
     {
@@ -976,9 +845,13 @@
         "| **Structured Output** | How to get JSON responses with schemas |\n",
         "| **Few-Shot Prompting** | How to use examples to improve output quality |\n",
         "\n",
+        "**>Note to see how your Lab Answers compare, go to the Solutions Folder to see our answers!**\n",
+        "\n",
+        "\n",
+        "\n",
         "## What's Next?\n",
         "\n",
-        "In the next session, we'll dive into **Retrieval Augmented Generation (RAG)** - a technique that lets you enhance LLM responses with your own data!\n",
+        "In the next session, we'll learn how to use **vector databases** to enable powerful semantic search capabilities for our AI applications.\n",
         "\n",
         "##  Additional Resources\n",
         "\n",
