--- a/Lab2_Qdrant_Vector_Database.ipynb
+++ b/Lab2_Qdrant_Vector_Database.ipynb
@@ -6,7 +6,7 @@
       "source": [
         "# Lab 2: Vector Databases with Qdrant\n",
         "\n",
-        "Welcome to Lab 2! In this session, you'll learn how to use **vector databases** to enable powerful semantic search capabilities for your AI applications.\n",
+        "Welcome to Lab 2! In this session, we'll learn how to use **vector databases** to enable powerful semantic search capabilities for your AI applications.\n",
         "\n",
         "**What you'll learn:**\n",
         "- What vector databases are and why they matter for AI\n",
@@ -417,8 +417,8 @@
         "qdrant_client = QdrantClient(\n",
         "\n",
         "    url=\"https://d78b1147-cde0-4b94-aa1e-9b6b2278050c.us-east4-0.gcp.cloud.qdrant.io:6333\", \n",
-        "    api_key=\"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.B0RB3KPvC_HSZ4wxZnSymZKrt6DZ_za45eKViBpdvIw\",\n",
-        "    \n",
+        "    api_key=\"---\",\n",
+        "\n",
         ")\n",
         "\n",
         "4. Copy your API Key and Cluster URL\n",
@@ -428,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
@@ -436,7 +436,7 @@
           "output_type": "stream",
           "text": [
             " Connected to Qdrant Cloud!\n",
-            " URL: https://d78b1147-cde0-4b94-aa1e-9b6b2278050c.us-ea...\n"
+            " URL: \n"
           ]
         }
       ],
@@ -446,10 +446,10 @@
         "# ============================================\n",
         "\n",
         "# Your Qdrant API Key (from Qdrant Cloud dashboard)\n",
-        "API_KEY = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.B0RB3KPvC_HSZ4wxZnSymZKrt6DZ_za45eKViBpdvIw\"  # Example: \"abc123xyz...\"\n",
+        "API_KEY = \"\"  # Example: \"abc123xyz...\"\n",
         "\n",
         "# Your Qdrant Cluster URL (from Qdrant Cloud dashboard)\n",
-        "QDRANT_URL = \"https://d78b1147-cde0-4b94-aa1e-9b6b2278050c.us-east4-0.gcp.cloud.qdrant.io:6333\"  # Example: \"https://abc123-xyz.us-east-1-0.aws.cloud.qdrant.io:6333\"\n",
+        "QDRANT_URL = \"\"  # Example: \"https://abc123-xyz.us-east-1-0.aws.cloud.qdrant.io:6333\"\n",
         "\n",
         "# ============================================\n",
         "\n",
@@ -991,7 +991,7 @@
         "3. **Augment** LLM prompts with retrieved context\n",
         "4. **Generate** accurate, grounded responses\n",
         "\n",
-        "Note to see how your Lab Answers compare, go to the Solutions Folder to see our answers!\n",
+        ">**Note** to see how your Lab Answers compare, go to the Solutions Folder to see our answers!\n",
         "\n",
         "##  What's Next?\n",
         "\n",
