Fix file paths in Solutions notebooks

--- a/Solutions/Lab2_Qdrant_Vector_Database_W_Solution.ipynb
+++ b/Solutions/Lab2_Qdrant_Vector_Database_W_Solution.ipynb
@@ -83,25 +83,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Note: you may need to restart the kernel to use updated packages.\n",
-            " All packages installed successfully!\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "[notice] A new release of pip is available: 24.0 -> 25.3\n",
-            "[notice] To update, run: C:\\Users\\asggm\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Install required packages (run this cell first, only needed once)\n",
         "%pip install pandas qdrant-client sentence-transformers langchain-community langchain-google-vertexai \n",
@@ -143,17 +125,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\asggm\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        },
         {
           "name": "stdout",
           "output_type": "stream",
@@ -323,7 +297,7 @@
               "9  Designers, artists, musicians, athletes. Taste...  "
             ]
           },
-          "execution_count": 1,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -335,8 +309,8 @@
         "from sentence_transformers import SentenceTransformer\n",
         "\n",
         "# Load the soft drinks data from CSV\n",
-        "# Make sure the file path is correct for your environment\n",
-        "df = pd.read_csv('data/softdrinks.csv')\n",
+        "# Path is ../data/ because this notebook is in the Solutions/ folder\n",
+        "df = pd.read_csv('../data/softdrinks.csv')\n",
         "\n",
         "# Display the dataframe to see what we're working with\n",
         "print(f\" Loaded {len(df)} products\")\n",
@@ -417,7 +391,7 @@
         "qdrant_client = QdrantClient(\n",
         "\n",
         "    url=\"https://d78b1147-cde0-4b94-aa1e-9b6b2278050c.us-east4-0.gcp.cloud.qdrant.io:6333\", \n",
-        "    api_key=\"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.B0RB3KPvC_HSZ4wxZnSymZKrt6DZ_za45eKViBpdvIw\",\n",
+        "    api_key=\"---\",\n",
         "    \n",
         ")\n",
         "\n",
@@ -428,7 +402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -436,7 +410,7 @@
           "output_type": "stream",
           "text": [
             " Connected to Qdrant Cloud!\n",
-            " URL: https://d78b1147-cde0-4b94-aa1e-9b6b2278050c.us-ea...\n"
+            " URL: \n"
           ]
         }
       ],
@@ -446,10 +420,10 @@
         "# ============================================\n",
         "\n",
         "# Your Qdrant API Key (from Qdrant Cloud dashboard)\n",
-        "API_KEY = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.B0RB3KPvC_HSZ4wxZnSymZKrt6DZ_za45eKViBpdvIw\"  # Example: \"abc123xyz...\"\n",
+        "API_KEY = \"\"  # Example: \"abc123xyz...\"\n",
         "\n",
         "# Your Qdrant Cluster URL (from Qdrant Cloud dashboard)\n",
-        "QDRANT_URL = \"https://d78b1147-cde0-4b94-aa1e-9b6b2278050c.us-east4-0.gcp.cloud.qdrant.io:6333\"  # Example: \"https://abc123-xyz.us-east-1-0.aws.cloud.qdrant.io:6333\"\n",
+        "QDRANT_URL = \"\"  # Example: \"https://abc123-xyz.us-east-1-0.aws.cloud.qdrant.io:6333\"\n",
         "\n",
         "# ============================================\n",
         "\n",
@@ -928,7 +902,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -937,10 +911,12 @@
           "text": [
             "---Lab Exercise 2: Filtered Search by Brand---\n",
             "\n",
-            " Query: 'energy boost'\n",
-            " Filter: brand = 'Gatorade'\n",
+            " Query: 'zero sugar'\n",
+            " Filter: brand = 'Sprite'\n",
             "\n",
-            "No results found. Try a different brand!\n"
+            "1. Sprite Zero Sugar Soda Pop Lemon Lime - 2 Liter (Score: 0.5814)\n",
+            "2. Sprite Soda Lemon Lime - 24-12 Fl. Oz. (Score: 0.2980)\n",
+            "3. Sprite Soda Pop Lemon Lime Pack In Cans - 12-12 Fl. Oz. (Score: 0.2978)\n"
           ]
         }
       ],
@@ -948,8 +924,8 @@
         "print(\"---Lab Exercise 2: Filtered Search by Brand---\\n\")\n",
         "\n",
         "# Your code here!\n",
-        "query = \"energy boost\"\n",
-        "filter_brand = \"Gatorade\"  # Try different brands!\n",
+        "query = \"zero sugar\"\n",
+        "filter_brand = \"Sprite\"  # Try different brands!\n",
         "\n",
         "hits = qdrant_client.query_points(\n",
         "    collection_name=collection_name,\n",
@@ -999,12 +975,43 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "---Lab Exercise 3: Your Own Search!---\n",
+            "\n",
+            " Query: 'natural fruit flavor'\n",
+            "\n",
+            "1. Sprite Soda Pop Lemon Lime - 1 Liter\n",
+            "   Brand: Sprite | Shelf: Lemon-Lime-Citrus-Soda\n",
+            "   Score: 0.4641\n",
+            "\n",
+            "2. Sprite Soda Lemon Lime - 24-12 Fl. Oz.\n",
+            "   Brand: Sprite | Shelf: Lemon-Lime-Citrus-Soda\n",
+            "   Score: 0.4525\n",
+            "\n",
+            "3. Sprite Soda Pop Lemon Lime Pack In Cans - 12-12 Fl. Oz.\n",
+            "   Brand: Sprite | Shelf: Lemon-Lime-Citrus-Soda\n",
+            "   Score: 0.4462\n",
+            "\n",
+            "4. Sprite Zero Sugar Soda Pop Lemon Lime - 2 Liter\n",
+            "   Brand: Sprite | Shelf: Lemon-Lime-Citrus-Soda\n",
+            "   Score: 0.3882\n",
+            "\n",
+            "5. Coca-Cola Soda Pop Caffeine Free - 12.12 Fl. Oz.\n",
+            "   Brand: Coca-Cola | Shelf: Cola\n",
+            "   Score: 0.3668\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"---Lab Exercise 3: Your Own Search!---\\n\")\n",
         "\n",
         "# ========================================\n",
-        "# 🎮 YOUR CODE HERE - Be creative!\n",
+        "#  YOUR CODE HERE - Be creative!\n",
         "# ========================================\n",
         "\n",
         "# Example: Search with multiple filters\n",
@@ -1016,7 +1023,7 @@
         "    limit=5,\n",
         ").points\n",
         "\n",
-        "print(f\"🔍 Query: '{query}'\\n\")\n",
+        "print(f\" Query: '{query}'\\n\")\n",
         "for i, hit in enumerate(hits, 1):\n",
         "    print(f\"{i}. {hit.payload.get('product_name', 'N/A')}\")\n",
         "    print(f\"   Brand: {hit.payload.get('brand', 'N/A')} | Shelf: {hit.payload.get('shelf', 'N/A')}\")\n",
