--- a/Solutions/Lab3_RAG_PDF_Chatbot_W_Solution.ipynb
+++ b/Solutions/Lab3_RAG_PDF_Chatbot_W_Solution.ipynb
@@ -6,7 +6,7 @@
       "source": [
         "#  Lab 3: Build a RAG PDF Chatbot\n",
         "\n",
-        "Welcome to Lab 3! This is the culmination of everything we've learned in this series. Now you'll build a complete **Retrieval Augmented Generation (RAG)** application that can:\n",
+        "Welcome to Lab 3! This is the culmination of everything we've learned in this series. Now you'll build a complete **Retrieval Augmented Generation** application that can:\n",
         "\n",
         "-  Upload and process PDF documents\n",
         "-  Convert document chunks into embeddings\n",
@@ -75,7 +75,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 🛠️ Step 1: Install Required Libraries\n",
+        "##  Step 1: Install Required Libraries\n",
         "\n",
         "We need the following libraries for our RAG application:\n",
         "- `qdrant-client`: Vector database client\n",
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -274,7 +274,7 @@
         }
       ],
       "source": [
-        "# 📦 Install all required packages (run once)\n",
+        "#  Install all required packages (run once)\n",
         "%pip install qdrant-client google-generativeai google-cloud-aiplatform PyPDF2 streamlit\n",
         "\n",
         "print(\" All packages installed!\")\n",
@@ -285,7 +285,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 📥 Step 2: Import Libraries\n",
+        "##  Step 2: Import Libraries\n",
         "\n",
         "Let's import all the libraries we need. Each serves a specific purpose in our RAG pipeline.\n"
       ]
@@ -295,6 +295,23 @@
       "execution_count": 2,
       "metadata": {},
       "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\asggm\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n",
+            "C:\\Users\\asggm\\AppData\\Local\\Temp\\ipykernel_47728\\2944277306.py:6: FutureWarning: \n",
+            "\n",
+            "All support for the `google.generativeai` package has ended. It will no longer be receiving \n",
+            "updates or bug fixes. Please switch to the `google.genai` package as soon as possible.\n",
+            "See README for more details:\n",
+            "\n",
+            "https://github.com/google-gemini/deprecated-generative-ai-python/blob/main/README.md\n",
+            "\n",
+            "  import google.generativeai as genai  # Gemini for text generation\n"
+          ]
+        },
         {
           "name": "stdout",
           "output_type": "stream",
@@ -332,7 +349,7 @@
       "source": [
         "---\n",
         "\n",
-        "## 🔧 Step 3: Configure Services\n",
+        "##  Step 3: Configure Services\n",
         "\n",
         "We need to set up connections to:\n",
         "1. **Google AI (Gemini)** - For text generation\n",
@@ -346,20 +363,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "✅ Configured with API key\n",
-            "✅ Vertex AI initialized for project: agents4good\n"
+            " Configured with Application Default Credentials (ADC)\n",
+            " Vertex AI initialized for project: test_project\n"
           ]
         }
       ],
       "source": [
-        "# \n",
         "#   GOOGLE CLOUD CONFIGURATION\n",
         "# ============================================\n",
         "\n",
@@ -367,20 +383,20 @@
         "# Option 2: For local development, set your API key below\n",
         "\n",
         "# For local development, get an API key from: https://makersuite.google.com/app/apikey\n",
-        "GOOGLE_API_KEY = \"AIzaSyAQuY3ZgJuzUVHrDQFpAMeW7oNThvgug-U\"  # Leave empty if using ADC in Google Cloud\n",
+        "GOOGLE_API_KEY = \"\"  # Leave empty if using ADC in Google Cloud\n",
         "\n",
         "if GOOGLE_API_KEY:\n",
         "    genai.configure(api_key=GOOGLE_API_KEY)\n",
-        "    print(\"✅ Configured with API key\")\n",
+        "    print(\" Configured with API key\")\n",
         "else:\n",
         "    genai.configure()  # Uses Application Default Credentials\n",
-        "    print(\"✅ Configured with Application Default Credentials (ADC)\")\n",
+        "    print(\" Configured with Application Default Credentials (ADC)\")\n",
         "\n",
         "# Initialize Vertex AI for embeddings\n",
         "# Replace with your Google Cloud Project ID if not using environment variable\n",
-        "PROJECT_ID = os.environ.get(\"GOOGLE_CLOUD_PROJECT\", \"agents4good\")\n",
+        "PROJECT_ID = os.environ.get(\"GOOGLE_CLOUD_PROJECT\", \"test_project\")\n",
         "vertexai.init(project=PROJECT_ID, location=\"us-central1\")\n",
-        "print(f\"✅ Vertex AI initialized for project: {PROJECT_ID}\")\n"
+        "print(f\" Vertex AI initialized for project: {PROJECT_ID}\")\n"
       ]
     },
     {
@@ -407,15 +423,14 @@
         }
       ],
       "source": [
-        "# \n",
         "#   QDRANT CONFIGURATION\n",
         "# ============================================\n",
         "\n",
         "# Your Qdrant API Key (from https://cloud.qdrant.io)\n",
-        "QDRANT_API_KEY = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.B0RB3KPvC_HSZ4wxZnSymZKrt6DZ_za45eKViBpdvIw\"  # Paste your API key here\n",
+        "QDRANT_API_KEY = \"\"  # Paste your API key here\n",
         "\n",
         "# Your Qdrant Cluster URL (make sure port is 6333!)\n",
-        "QDRANT_URL = \"https://d78b1147-cde0-4b94-aa1e-9b6b2278050c.us-east4-0.gcp.cloud.qdrant.io:6333\"  # Example: \"https://xxx.us-east4-0.gcp.cloud.qdrant.io:6333\"\n",
+        "QDRANT_URL = \"\"  # Example: \"https://xxx.us-east4-0.gcp.cloud.qdrant.io:6333\"\n",
         "\n",
         "# ============================================\n",
         "\n",
@@ -920,7 +935,7 @@
         }
       ],
       "source": [
-        "#  Step 6a: Create the Streamlit app file\n",
+        "#  Step 6-part1: Create the Streamlit app file\n",
         "# This cell writes a complete Python file with all dependencies\n",
         "\n",
         "# First, let's save the credentials to include in the file\n",
@@ -1124,12 +1139,13 @@
             "   This will open a new browser tab automatically!\n",
             "\n",
             " To stop the app: Click 'Interrupt Kernel' or press Ctrl+C\n",
-            "--------------------------------------------------\n"
+            "--------------------------------------------------\n",
+            "^C\n"
           ]
         }
       ],
       "source": [
-        "# Step 6b: Launch the Streamlit App\n",
+        "# Step 6-part2: Launch the Streamlit App\n",
         "# Run this cell to start the chatbot server\n",
         "\n",
         "import subprocess\n",
@@ -1148,16 +1164,16 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 🎉 Example: Working RAG Chatbot\n",
+        "### Example: Working RAG Chatbot\n",
         "\n",
         "Here's what the chatbot looks like in action! This example shows a user uploading the famous \"Attention Is All You Need\" paper and asking questions about it:\n",
         "\n",
-        "![RAG Chatbot Demo](images/streamlit_demo.png)\n",
+        "![RAG Chatbot Demo](../images/streamlit_demo.png)\n",
         "\n",
         "**What's happening:**\n",
-        "1. 📄 User uploaded \"Attention Is All You Need.pdf\"\n",
-        "2. ❓ User asked: \"What is this document about?\"\n",
-        "3. 🤖 The chatbot retrieved relevant chunks from the PDF and generated an accurate response about the Transformer architecture paper!\n"
+        "1.  We uploaded \"Attention Is All You Need.pdf\"\n",
+        "2.  We asked: \"What is this document about?\"\n",
+        "3.  The chatbot retrieved relevant chunks from the PDF and generated an accurate response about the Transformer architecture paper!\n"
       ]
     },
     {
@@ -1166,7 +1182,7 @@
       "source": [
         "---\n",
         "\n",
-        "## 🎯 Lab Exercises\n",
+        "## 🧪 Lab Exercises\n",
         "\n",
         "Now it's your turn! Complete these exercises to deepen your understanding.\n",
         "\n",
@@ -1183,7 +1199,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# 🧪 Lab Exercise 1: Experiment with Chunk Sizes\n",
+        "#  Lab Exercise 1: Experiment with Chunk Sizes\n",
         "# Try ingesting the same PDF with different chunk sizes\n",
         "\n",
         "CHUNK_SIZES_TO_TEST = [250, 500, 1000]\n",
@@ -1404,13 +1420,8 @@
         "-  **Lab 2**: Vector databases and similarity search\n",
         "-  **Lab 3**: Full RAG application with UI\n",
         "\n",
-        "Happy building! 🚀\n"
+        "Happy building!!!\n"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
     }
   ],
   "metadata": {
